--- a/ContainerMultithreading/Base.lproj/Main.storyboard
+++ b/ContainerMultithreading/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="1cS-eH-k4x">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -22,7 +22,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hkZ-4K-iXH">
-                                <rect key="frame" x="126" y="102" width="123" height="30"/>
+                                <rect key="frame" x="126" y="146" width="123" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="123" id="0nJ-iR-zFB"/>
                                     <constraint firstAttribute="height" constant="30" id="1Ie-cF-uM1"/>
@@ -33,7 +33,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OR4-4C-kBI">
-                                <rect key="frame" x="120" y="230" width="135" height="30"/>
+                                <rect key="frame" x="120" y="274" width="135" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="135" id="uad-zG-pML"/>
                                     <constraint firstAttribute="height" constant="30" id="vri-0w-hOP"/>
@@ -43,17 +43,123 @@
                                     <action selector="nonThreadSafeWay:" destination="BYZ-38-t0r" eventType="touchUpInside" id="EgT-xG-e2O"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nU4-7V-ey1">
+                                <rect key="frame" x="171" y="380" width="32" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="32" id="9cZ-DS-ZLi"/>
+                                    <constraint firstAttribute="height" constant="30" id="x6d-MX-e2E"/>
+                                </constraints>
+                                <state key="normal" title="Stop"/>
+                                <connections>
+                                    <action selector="stopButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="17J-uE-H6w"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IFG-81-iz0">
+                                <rect key="frame" x="144" y="498" width="87" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="Jng-xZ-yi8"/>
+                                    <constraint firstAttribute="width" constant="87" id="r8S-ou-i3n"/>
+                                </constraints>
+                                <state key="normal" title="OC Version"/>
+                                <connections>
+                                    <segue destination="0rR-5r-Gxd" kind="show" id="brT-hE-vgc"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="nU4-7V-ey1" firstAttribute="top" secondItem="OR4-4C-kBI" secondAttribute="bottom" constant="76" id="AHF-Tz-u6n"/>
+                            <constraint firstItem="nU4-7V-ey1" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Fza-co-NW4"/>
                             <constraint firstItem="hkZ-4K-iXH" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="82" id="Sas-Hx-rLi"/>
+                            <constraint firstItem="IFG-81-iz0" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="XWi-Jr-r8Z"/>
+                            <constraint firstItem="IFG-81-iz0" firstAttribute="top" secondItem="nU4-7V-ey1" secondAttribute="bottom" constant="88" id="kpj-sA-sQE"/>
                             <constraint firstItem="OR4-4C-kBI" firstAttribute="top" secondItem="hkZ-4K-iXH" secondAttribute="bottom" constant="98" id="lDx-Pt-ATC"/>
                             <constraint firstItem="OR4-4C-kBI" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="vqB-if-b9W"/>
                             <constraint firstItem="hkZ-4K-iXH" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="xEa-Ly-FgN"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="Vtz-u5-CHH"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1056.8" y="122.78860569715144"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="dXB-1d-WBT">
+            <objects>
+                <viewController id="0rR-5r-Gxd" customClass="OCViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Z34-1F-DfR"/>
+                        <viewControllerLayoutGuide type="bottom" id="vBE-hw-8e5"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="UPi-0y-Jqg">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mUu-MP-U7h">
+                                <rect key="frame" x="126" y="149" width="123" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="O67-Jm-jg5"/>
+                                    <constraint firstAttribute="width" constant="123" id="oCd-4q-jQU"/>
+                                </constraints>
+                                <state key="normal" title="ThreadSafeWay"/>
+                                <connections>
+                                    <action selector="threadSafeButtonPressed:" destination="0rR-5r-Gxd" eventType="touchUpInside" id="Ya2-Q2-bfi"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xdF-kw-72n">
+                                <rect key="frame" x="120" y="277" width="135" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="dfh-LH-f0k"/>
+                                    <constraint firstAttribute="width" constant="135" id="hAe-DM-dId"/>
+                                </constraints>
+                                <state key="normal" title="NonThreadSafeWay"/>
+                                <connections>
+                                    <action selector="nonThreadSafeButtonPressed:" destination="0rR-5r-Gxd" eventType="touchUpInside" id="XZp-Qa-3sN"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nxy-Dt-Dma">
+                                <rect key="frame" x="171" y="383" width="32" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="32" id="2jK-1e-9Xz"/>
+                                    <constraint firstAttribute="height" constant="30" id="U7P-z4-o6P"/>
+                                </constraints>
+                                <state key="normal" title="Stop"/>
+                                <connections>
+                                    <action selector="stopButtonPressed:" destination="0rR-5r-Gxd" eventType="touchUpInside" id="jIL-Nz-67n"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="xdF-kw-72n" firstAttribute="top" secondItem="mUu-MP-U7h" secondAttribute="bottom" constant="98" id="Kqu-Lz-gDF"/>
+                            <constraint firstItem="Nxy-Dt-Dma" firstAttribute="top" secondItem="xdF-kw-72n" secondAttribute="bottom" constant="76" id="TYq-Va-LWW"/>
+                            <constraint firstItem="Nxy-Dt-Dma" firstAttribute="centerX" secondItem="UPi-0y-Jqg" secondAttribute="centerX" id="cjJ-2M-SSO"/>
+                            <constraint firstItem="xdF-kw-72n" firstAttribute="centerX" secondItem="UPi-0y-Jqg" secondAttribute="centerX" id="gHE-fO-w8i"/>
+                            <constraint firstItem="mUu-MP-U7h" firstAttribute="top" secondItem="Z34-1F-DfR" secondAttribute="bottom" constant="85" id="iJM-uD-l5h"/>
+                            <constraint firstItem="mUu-MP-U7h" firstAttribute="centerX" secondItem="UPi-0y-Jqg" secondAttribute="centerX" id="uIW-JK-l1Z"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="JJh-gU-2qE" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1966" y="123"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="z2N-l1-Zee">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="1cS-eH-k4x" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="K92-xt-JgM">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="Jnf-38-2b0"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="EUK-A8-7az" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="117.59999999999999" y="122.78860569715144"/>
         </scene>
